--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"typescript": "^5.0.0"
 	},
 	"dependencies": {
-		"lefthook": "^1.7.12"
+		"lefthook": "^1.7.12",
+		"stripe": "^16.7.0"
 	}
 }
