--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
 	"name": "stripe",
-	"module": "index.ts",
+	"version": "0.1.0",
+	"private": true,
 	"scripts": {
 		"apply": "bunx @biomejs/biome check --write ./",
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "bunx @biomejs/biome lint --write ./",
 		"check": "bunx @biomejs/biome check ./"
 	},
 	"type": "module",
@@ -11,10 +16,20 @@
 		"@types/bun": "latest"
 	},
 	"peerDependencies": {
-		"typescript": "^5.0.0"
+		"typescript": "^5.0.0",
+		"@biomejs/biome": "1.8.3",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"postcss": "^8",
+		"tailwindcss": "^3.4.1"
 	},
 	"dependencies": {
 		"lefthook": "^1.7.12",
-		"stripe": "^16.7.0"
+		"stripe": "^16.7.0",
+		"next": "14.2.4",
+		"react": "^18",
+		"react-dom": "^18",
+		"tailwind-merge": "^2.4.0"
 	}
 }
